--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,45 @@
-body {
+html, body {
+    height: 100%;
+    margin: 0;
     font-family: Arial, sans-serif;
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+}
+
+.wrapper {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+nav {
+    background-color: #333;
+    padding: 1em;
+    text-align: right;
+}
+
+nav ul {
+    list-style: none;
     margin: 0;
     padding: 0;
-    background-color: #f4f4f4;
-    color: #333;
+}
+
+nav ul li {
+    display: inline;
+    margin-left: 20px;
+}
+
+nav ul li a {
+    color: #fff;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+nav ul li a:hover {
+    text-decoration: underline;
 }
 
 header {
@@ -15,6 +51,11 @@ header {
 
 h1 {
     margin: 0;
+}
+
+main {
+    flex: 1;
+    padding: 2em 0;
 }
 
 .gallery {
@@ -38,12 +79,9 @@ h1 {
     height: auto;
 }
 
+
+/*
 footer {
-    background-color: #333;
-    color: #fff;
-    text-align: center;
-    padding: 1em 0;
-    position: fixed;
-    width: 100%;
-    bottom: 0;
+
 }
+*/
